--- a/about.html
+++ b/about.html
@@ -1,65 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Clothing Brand</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - Shirosa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div class="navbar">
+
+      <!-- NAVBAR -->
+    <header class="navbar">
         <div class="brand">
             <h1>Shirosa</h1>
             <p>Premium Streetwear</p>
         </div>
-
         <nav>
-           <a href="index.html">Home</a>
-<a href="shop.html">Shop</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact</a>
-
+            <a href="index.html">Home</a>
+            <a href="#">Shop</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
-    </div>
+    </header>
 
-   <!-- HERO SECTION -->
-<div class="hero">
-    <h2>About Shirosa</h2>
-    <p>Designed with purpose. Built for everyday confidence.</p>
-</div>
+    <!-- ABOUT STORY -->
+    <section class="brand-story">
+        <h2>Our Story</h2>
+        <p>
+            Shirosa is a streetwear brand built on simplicity, intention, and confidence. 
+            We design timeless pieces that feel effortless in everyday life, 
+            not just trends. Every garment is created with thoughtfulness and quality.
+        </p>
 
-    <div class="brand-story">
-    <h2>Our Story</h2>
-    <p>
-        Shirosa is built on simplicity, intention, and confidence.
-        We believe streetwear should feel effortless — timeless pieces
-        designed for everyday moments, not trends.
-    </p>
-</div>
+        <div class="about-image">
+            <img src="https://via.placeholder.com/800x500" alt="Our Team">
+        </div>
 
+        <p>
+            Our mission is to make streetwear that empowers you to feel confident, 
+            minimal, and stylish every single day. From hoodies to tees, every product 
+            is designed with love, care, and a focus on detail.
+        </p>
+    </section>
 
-    <h2 class="section-title">Featured Products</h2>
-
-<div class="products">
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="T-shirt">
-        <p>Classic Black Tee</p>
-        <span>$39</span>
-    </div>
-
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Hoodie">
-        <p>Oversized Hoodie</p>
-        <span>$79</span>
-    </div>
-
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Jacket">
-        <p>Minimal Jacket</p>
-        <span>$129</span>
-    </div>
-</div>
-
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2026 Shirosa. All rights reserved.</p>
+        <div class="socials">
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+        </div>
+    </footer>
 
 </body>
-</html>
+</html> 
