--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>My Clothing Brand</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -26,7 +28,8 @@
     <div class="hero">
         <h2>Minimal. Thoughtful. Effortless.</h2>
         <p>Designed for everyday moments.</p>
-        <button>Shop Now</button>
+        <a href="shop.html"><button>Shop Now</button></a>
+
     </div>
     <div class="brand-story">
     <h2>Our Story</h2>
@@ -45,21 +48,34 @@
         <img src="https://via.placeholder.com/300x400" alt="T-shirt">
         <p>Classic Black Tee</p>
         <span>$39</span>
+        <a href="shop.html"><button>Shop Now</button></a>
     </div>
 
     <div class="product-card">
         <img src="https://via.placeholder.com/300x400" alt="Hoodie">
         <p>Oversized Hoodie</p>
         <span>$79</span>
+        <a href="shop.html"><button>Shop Now</button></a>
     </div>
 
     <div class="product-card">
         <img src="https://via.placeholder.com/300x400" alt="Jacket">
         <p>Minimal Jacket</p>
         <span>$129</span>
+        <a href="shop.html"><button>Shop Now</button></a>
     </div>
 </div>
 
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2026 Shirosa. All Rights Reserved.</p>
+        <div class="socials">
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+            <a href="#">Email</a>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
