--- a/contact.html
+++ b/contact.html
@@ -1,77 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Clothing Brand</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Shirosa</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <div class="navbar">
+    <!-- NAVBAR -->
+    <header class="navbar">
         <div class="brand">
             <h1>Shirosa</h1>
             <p>Premium Streetwear</p>
         </div>
-
         <nav>
             <a href="index.html">Home</a>
-<a href="shop.html">Shop</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact</a>
-
+            <a href="#">Shop</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
-    </div>
+    </header>
 
-    <!-- HERO SECTION -->
-    <div class="hero">
-        
-    <h2>Contact Us</h2>
-    <p>Let’s connect.</p>
+    <!-- CONTACT FORM -->
+    <section class="contact">
+        <h2>Get in Touch</h2>
+        <p>Have questions or want to collaborate? Send us a message!</p>
 
-    </div>
-    <div class="contact">
-    <h2>Get in Touch</h2>
+        <form>
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
 
-    <form>
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <textarea placeholder="Your Message"></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-</div>
-
-    <div class="brand-story">
-    <h2>Our Story</h2>
-    <p>
-        Shirosa is built on simplicity, intention, and confidence.
-        We believe streetwear should feel effortless — timeless pieces
-        designed for everyday moments, not trends.
-    </p>
-</div>
-
-
-    <h2 class="section-title">Featured Products</h2>
-
-<div class="products">
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="T-shirt">
-        <p>Classic Black Tee</p>
-        <span>$39</span>
-    </div>
-
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Hoodie">
-        <p>Oversized Hoodie</p>
-        <span>$79</span>
-    </div>
-
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Jacket">
-        <p>Minimal Jacket</p>
-        <span>$129</span>
-    </div>
-</div>
-
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2026 Shirosa. All rights reserved.</p>
+        <div class="socials">
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+        </div>
+    </footer>
 
 </body>
 </html>
