--- a/shop.html
+++ b/shop.html
@@ -1,65 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Clothing Brand</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shop - Shirosa</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <div class="navbar">
+    <!-- NAVBAR -->
+    <header class="navbar">
         <div class="brand">
             <h1>Shirosa</h1>
             <p>Premium Streetwear</p>
         </div>
-
         <nav>
             <a href="index.html">Home</a>
-<a href="shop.html">Shop</a>
-<a href="about.html">About</a>
-<a href="contact.html">Contact</a>
-
+            <a href="shop.html">Shop</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
-    </div>
+    </header>
 
-    <!-- HERO SECTION -->
-    <div class="hero">
-        <h2>Minimal. Thoughtful. Effortless.</h2>
-        <p>Designed for everyday moments.</p>
-        <button>Shop Now</button>
-    </div>
-    <div class="brand-story">
-    <h2>Our Story</h2>
-    <p>
-        Shirosa is built on simplicity, intention, and confidence.
-        We believe streetwear should feel effortless — timeless pieces
-        designed for everyday moments, not trends.
-    </p>
-</div>
+    <!-- SHOP PRODUCTS -->
+    <section class="products">
+        <h2 class="section-title">Shop All Products</h2>
 
+        <div class="product-card">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/300x400" alt="Classic Black Tee">
+                <div class="overlay">
+                    <span>$39</span>
+                    <a href="shop.html"><button>Shop Now</button></a>
 
-    <h2 class="section-title">Featured Products</h2>
+                </div>
+            </div>
+            <p>Classic Black Tee</p>
+        </div>
 
-<div class="products">
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="T-shirt">
-        <p>Classic Black Tee</p>
-        <span>$39</span>
-    </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/300x400" alt="Oversized Hoodie">
+                <div class="overlay">
+                    <span>$79</span>
+                    <a href="shop.html"><button>Shop Now</button></a>
 
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Hoodie">
-        <p>Oversized Hoodie</p>
-        <span>$79</span>
-    </div>
+                </div>
+            </div>
+            <p>Oversized Hoodie</p>
+        </div>
 
-    <div class="product-card">
-        <img src="https://via.placeholder.com/300x400" alt="Jacket">
-        <p>Minimal Jacket</p>
-        <span>$129</span>
-    </div>
-</div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/300x400" alt="Minimal Jacket">
+                <div class="overlay">
+                    <span>$129</span>
+                   <a href="shop.html"><button>Shop Now</button></a>
 
+                </div>
+            </div>
+            <p>Minimal Jacket</p>
+        </div>
+
+        <!-- Add more products here -->
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2026 Shirosa. All rights reserved.</p>
+        <div class="socials">
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+        </div>
+    </footer>
 
 </body>
 </html>
